--- a/index.html
+++ b/index.html
@@ -61,22 +61,19 @@
     font-weight: bold;
     padding: 10px 15px;
     transition: 0.3s ease-in-out;
-    background: transparent; /* Remove the background */
+    background: transparent; 
     border-radius: 5px;
 }
 
-/* Active Link (Only One Should be Active) */
 .nav__link.active {
-    background: #00c8ff;  /* Highlight color (Cyan) */
-    color: black;          /* Text changes to black */
+    background: #00c8ff;  
+    color: #0e375e; 
 }
     .nav__link:hover,
     .nav__link.active {
         background: #00E8F8;
         color: #1F252E;
     }
-
-    /* Sections */
     section {
         padding: 100px;
         margin: 50px 0;
@@ -87,7 +84,6 @@
         text-align: center;
     }
 
-    /* Home */
     .home {
         display: flex;
         flex-wrap: wrap;
@@ -118,7 +114,6 @@
         box-shadow: 0px 10px 4px -5px #00E8F8;
     }
 
-    /* About */
     .about__container {
         display: flex;
         align-items: center;
@@ -152,7 +147,6 @@
         color: #1F252E;
     }
 
-    /* My Work */
     .work__container {
         display: flex;
         gap: 1rem;
@@ -165,7 +159,6 @@
         box-shadow: 0px 10px 4px -5px #00E8F8;
     }
 
-    /* Footer */
     .footer {
         text-align: center;
         padding: 0.5rem 0;
@@ -199,7 +192,7 @@
 }  </style>
 
 </head>
-<body><!-- HEADER -->
+<body>
 <header class="l-header">
     <nav class="nav">
         <a href="#" class="nav__logo">Portflio</a>
@@ -214,7 +207,7 @@
 </header>
 
 <main>
-    <!-- HOME -->
+    
     <section id="home">
         <img src="image.jpeg" style="width: 200px; height: auto; border-radius: 10px; box-shadow: 0px 10px 4px -5px #00E8F8;">
           <h1>HI,</h1>
