--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 <body>
 <header class="l-header">
     <nav class="nav">
-        <a href="#" class="nav__logo">Portflio</a>
+        <a href="#" class="nav__logo">Portfolio</a>
         <ul class="nav__list">
             <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
             <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
