--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     
     <section id="home">
         <img src="image.jpeg" style="width: 200px; height: auto; border-radius: 10px; box-shadow: 0px 10px 4px -5px #00E8F8;">
-          <h1>HI,</h1>
+          <h1>Hi,</h1>
             <p>I'm A Computer Science Student</p>
     
         </section>
@@ -240,8 +240,8 @@
         <div class="ag-courses_box">
             <div class="ag-courses_item">Java</div>
             <div class="ag-courses_item">Python</div>
-            <div class="ag-courses_item">Html</div>
-            <div class="ag-courses_item">Javascript</div>
+            <div class="ag-courses_item">HTML</div>
+            <div class="ag-courses_item">JavaScript</div>
             <div class="ag-courses_item">Debugging Code</div>
         </div>
     </section>
@@ -256,7 +256,7 @@
 </section>
 
 <footer>
-    <p>&copy;SHAEZADI A 2006</p>
+    <p>&copy;SHAEZADI A 2025</p>
 </footer>
 
 <script>
