--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         <div class="section-content>
             <h2>Project</h2>
             <ul>
-            <li><a href="  "> </a>
+            <li><a href="shaez.html"> </a>
         </li>
         </ul>
         </div>
