--- a/index2.html
+++ b/index2.html
@@ -207,7 +207,7 @@
 <main>
     
     <section id="home">
-        <img src="image.jpag" style="width: 200px; height: auto; border-radius: 10px; box-shadow: 0px 10px 4px -5px #00E8F8;">
+        <img src="image.jpeg" style="width: 200px; height: auto; border-radius: 10px; box-shadow: 0px 10px 4px -5px #00E8F8;">
           <h1>Hi,</h1>
             <p>I'm A Computer Science Student</p>
     
