--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         <div class="section-content">
             <h2>Projects</h2>
             <ul>
-                <li><a href="shaez.html">Online couse</a></li>
+                <li><a href="shaez.html">Online shopping</a></li>
                
                 <!-- Add more project links here -->
             </ul>
